--- a/admin.html
+++ b/admin.html
@@ -54,8 +54,8 @@
                     <div class="navbar-nav mx-auto py-0">
                         <a href="#home" class="nav-item nav-link active">Home</a>
                         <a href="#about" class="nav-item nav-link">About</a>
-                        <a href="#feature" class="nav-item nav-link">Reports</a>
-                    </div>
+                        <a href="#feature" class="nav-item nav-link">Management</a>
+                    </div>  
                     <a href="index.html" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Log Out</a>
                 </div>
             </nav>
@@ -81,7 +81,7 @@
         <!-- Navbar & Hero End -->
 
         <!-- About Start -->
-        <div class="container-xxl py-5" id="about">
+<div class="container-xxl py-5" id="about">
     <div class="container py-5 px-lg-5">
         <div class="row g-5 align-items-center">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -118,6 +118,7 @@
 
 
         <!-- Manage Engineers Section -->
+<div class="container-xxl py-5" id="feature">
         <div id="engineers" class="container py-5">
             <h2 class="text-center">Manage Engineers</h2>
             <table class="table table-bordered">
@@ -152,6 +153,27 @@
                 </tbody>
             </table>
         </div>
+        <div id="warehouses" class="container py-5">
+            <h2 class="text-center">Manage Warehouses</h2>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Manager Name</th>
+                        <th>Warehouse Name</th>
+                        <th>Location</th>
+                        <th>Capacity in square meters</th>
+                        <th>Status</th>
+                        <th>Last Updated</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Fetched dynamically via JavaScript -->
+                </tbody>
+            </table>
+        </div>
+
+</div>
 
         <!-- Footer Start -->
         <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s">
@@ -270,6 +292,7 @@
 
                 renderUsers();
             });
+            
         </script>
     </div>
 </body>
