added add new warehouse and delete warehouse

--- a/mainEng.html
+++ b/mainEng.html
@@ -136,7 +136,7 @@
                             </div>
                             <h5 class="mb-3">Create New Report</h5>
                             <p class="m-0">Quickly generate comprehensive safety engineering reports with ease and precision.</p>
-                            <a href="questionnaire.php" class="btn btn-primary-gradient mt-3">Create New Report</a>
+                            <a href="requestPage.php" class="btn btn-primary-gradient mt-3">Create New Report</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
